2011-05-24  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Ryosuke Niwa.

        [SVG] Assertion failure by dragging text between input fields inside <foreignObject>s
        https://bugs.webkit.org/show_bug.cgi?id=60692

        Test case to verify dragging and dropping text between input fields
        inside SVG <foreignObject>s. Test passes if no crash occurs in debug mode.

        Drag and drop is not supported in Qt DRT, so skip this case on Qt platform.

        * editing/pasteboard/drag-drop-input-in-svg-expected.txt: Added.
        * editing/pasteboard/drag-drop-input-in-svg.svg: Added.
        * platform/qt/Skipped:

2011-05-24  Tony Chang  <tony@chromium.org>

        Reviewed by James Robinson.

        fix render overflow computation for input type=range
        https://bugs.webkit.org/show_bug.cgi?id=61132

        * fast/forms/slider-hit-testing-expected.txt: Added.
        * fast/forms/slider-hit-testing.html: Added.

2011-05-14  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dan Bernstein.

        Tests that we do not crash when trying to parse an invalid font family
        value of 'inherit' or 'initial' in a font face rule.
        https://bugs.webkit.org/show_bug.cgi?id=60837

        * fast/css/invalid-font-family-in-font-face-crash-expected.txt: Added.
        * fast/css/invalid-font-family-in-font-face-crash.html: Added.

2011-05-18  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dirk Schulze.

        Tests that we do not crash when trying to access a removed
        smil element in animated elements list.
        https://bugs.webkit.org/show_bug.cgi?id=60980

        * svg/animations/smil-element-not-removed-crash-expected.txt: Added.
        * svg/animations/smil-element-not-removed-crash.html: Added.

2011-05-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r87007.
        http://trac.webkit.org/changeset/87007
        https://bugs.webkit.org/show_bug.cgi?id=61329
