@@ -1,0 +1,53 @@
+<html>
+<head>
+<style>
+.box {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    position: absolute;
+    top: 60px;
+    left: 40px;
+}
+</style>
+<script type="text/javascript">
+
+function runTest() {
+
+    var id1 = "a";
+    var element1 = document.getElementById("a");
+    var y1 = webkitConvertPointFromNodeToPage(element1, new WebKitPoint(0,0)).y;
+
+    var resultString = '';
+    if (y1 > 250) {
+        resultString += "PASS - Element moved past y=250px";
+    } else {
+        resultString += "FAIL - Element still at y=" + y1 + "px";
+    }
+
+    document.body.appendChild(document.createTextNode(resultString));
+
+    if (window.layoutTestController) {
+        window.layoutTestController.dumpAsText();
+        window.layoutTestController.notifyDone();
+    }
+}
+</script>
+</head>
+<body>
+
+<div class="box" id="a"></div>
+
+<script>
+    if (window.layoutTestController)
+        window.layoutTestController.waitUntilDone();
+
+    setTimeout(move, 10);
+    function move() {
+        document.getElementById('a').style.top = "300px";
+        document.getElementById('a').style.webkitTransform = "rotate(45deg)";
+        setTimeout(runTest, 0);
+    }
+</script>
+</body>
+</html>
